--- a/home/techguides/git-folder-standardization.html
+++ b/home/techguides/git-folder-standardization.html
@@ -530,9 +530,9 @@
 </div>
 <p>  <img src="images/tafjdb.png" alt=""></p>
 <p>The Git Folder Standardization allows you to add the db.properties file into the TAFJDB.zip. The db.properties file contains the db name, clientdb user and pass:</p>
-<p>  <img src="images/db.properties.png" alt=""></p>
+<p>  <img src="./images/db.properties.png" alt=""></p>
 <p>If the folder inside TAFJDB.zip file is renamed, then it is mandatory in the db.properties to add the db-name the same as the db folder name and the credentials for the respective db.</p>
-<p>  <img src="images/db.properties2.png" alt=""></p>
+<p>  <img src="./images/db.properties2.png" alt=""></p>
 <div class="NOTE"><h5>Note</h5><p>If you want to overwrite the database it is important to do at least one change before deploying it. Otherwise the platform will pick the initial database only.</p>
 </div>
 <h2 id="5-attachments">5. Attachments</h2>
