--- a/home/techguides/deploy-an-update-to-an-existing-environment.html
+++ b/home/techguides/deploy-an-update-to-an-existing-environment.html
@@ -88,7 +88,8 @@
 <li>Make sure you have an user created under your organisation that has a public ssh key attached. Please check this <a href="user-creation-in-paas.html" target="blank">guide</a> to understand how you can create an user or how you can generate and attach a ssh key to an user.</li>
 </ul>
 <h1 id="clone-environment-repository">Clone Environment Repository</h1>
-<p> To clone an environment repository login to your organisation, select your environment and locate the Endpoint of <strong>Repository</strong> Application (this is the last available endpoint on the environment page). </p>
+<p> To clone an environment repository login to your organisation, select your environment and locate the Endpoint of <strong>Repository</strong> Application (this is the last available endpoint on the environment page). 
+o</p>
 <ul>
 <li><p>Click the <strong>copy to clipboard icon</strong> from the right:</p>
 <p><img src="images/use-git-endpoint.png" alt="repository"></p>
@@ -641,7 +642,7 @@
 </li>
 </ul>
 <h3 id="44-standalonexml-file-notes">4.4 Standalone.xml file notes</h3>
-<p>There are different standalone.xml templates for TSS and OSS. These are provided to you by us.</p>
+<p>There are different standalone.xml templates for <a href="http://documentation.temenos.cloud/home/techguides/templates-list.html#t24">TSS (Jboss/ SQL) and OSS (Widlfly/ H2)</a>. These are provided to you by us.</p>
 <h3 id="441-the-standalonexml-tss-template">4.4.1 The standalone.xml TSS template:</h3>
 <ul>
 <li><p>don’t change any of the static values</p>
@@ -682,15 +683,15 @@
 </br></p>
 </div>
 <h2 id="5-attachments">5. Attachments</h2>
-<p>You can download the Standalone OSS/ TSS and the db.properties files below:</p>
+<p>You can download the Standalone OSS (Wildfly/ H2)/ TSS (Jboss/ SQL) and the db.properties files below:</p>
 <ul>
-<li><p><strong><a href="./../zip/client-standalone-OSS-1">Standalone OSS file applicable for lower template versions than 202008</a></strong> </p>
+<li><p><strong><a href="./../zip/client-standalone-OSS-1">Standalone OSS (Wildfly/ H2) file applicable for lower template versions than 202008</a></strong> </p>
 </li>
-<li><p><strong><a href="./../zip/client-standalone-OSS-2">Standalone OSS file applicable for higher template versions than 202008 (including the 202008 version)</a></strong> </p>
+<li><p><strong><a href="./../zip/client-standalone-OSS-2">Standalone OSS (Wildfly/ H2) file applicable for higher template versions than 202008 (including the 202008 version)</a></strong> </p>
 </li>
-<li><p><strong><a href="./../zip/client-standalone-TSS-1">Standalone TSS file applicable for lower template versions than 202008</a></strong> </p>
+<li><p><strong><a href="./../zip/client-standalone-TSS-1">Standalone TSS (Jboss/ SQL) file applicable for lower template versions than 202008</a></strong> </p>
 </li>
-<li><p><strong><a href="./../zip/client-standalone-TSS-2">Standalone TSS file applicable for higher template than 202008 (including the 202008 version)</a></strong> </p>
+<li><p><strong><a href="./../zip/client-standalone-TSS-2">Standalone TSS (Jboss/ SQL) file applicable for higher template than 202008 (including the 202008 version)</a></strong> </p>
 </li>
 <li><p><strong><a href="../zip/db.properties">db.properties file</a></strong> </p>
 </li>
