--- a/home/toc.html
+++ b/home/toc.html
@@ -251,14 +251,8 @@
                       </ul>  </li>
                 </ul>  </li>
             <li>
-              <span class="expand-stub"></span>
-              <a>Release information</a>
-                
-                <ul class="nav level2">
-                  <li>
-                    <a href="techguides/release-info-2020.html" name="" title="2020">2020</a>
-                  </li>
-                </ul>  </li>
+              <a href="techguides/release-notes.html" name="" title="Release information">Release information</a>
+            </li>
             <li>
               <a href="faq.html" name="" title="FAQs">FAQs</a>
             </li>
