--- a/home/techguides/release-notes-internal.html
+++ b/home/techguides/release-notes-internal.html
@@ -103,8 +103,9 @@
 <h2 id="technical-enhancements">Technical enhancements</h2>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. Removed references to T24</strong></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - <strong>T24</strong> is renamed to <strong>Transact</strong> across the Temenos Continuous Deployment Portal.
-<br> </p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>2. Display the list of components that will be deployed</strong> </p>
+<br> 
+<br><br> 
+&nbsp;&nbsp;&nbsp;&nbsp;<strong>2. Display the list of components that will be deployed</strong> </p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - After clicking Deploy a notification appears which shows the list of components that will be deployed during the repository deployment. You need to confirm the action to proceed.
 <br>
 </br></p>
