--- a/home/techguides/release-notes-internal.html
+++ b/home/techguides/release-notes-internal.html
@@ -89,7 +89,7 @@
 <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. Number of environment validation not working as expected</strong></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Only Extend environments are taken into consideration by the MAX_ENV_COUNT metadata. 
 <br><br> </p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>2. FCM, Infinity and Wealth templates have a similar dynamic structure to Transact Environments</strong> </p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>2. Environments provisioned with the FCM, Infinity and Wealth templates have a similar dynamic structure as the ones provisioned with Transact templates</strong> </p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - As part of the GIT Folder Standardization changes, Temenos Continuous Deployment provides separate folder structure for FCM, Wealth and Infinity under the parent folder <em>Environment Configuration</em>. Read more <a href="http://documentation.temenos.cloud/home/techguides/deploy-an-update-to-an-existing-environment.html#the-environment-folder-structure-after-the-clone"><strong>here</strong></a>.
 <br>
 </br></p>
