--- a/home/techguides/release-notes-internal.html
+++ b/home/techguides/release-notes-internal.html
@@ -86,15 +86,15 @@
 <p><strong>InfraBuild</strong>: TBA   &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: TBA
 &nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: TBA  &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TBA &nbsp; </p>
 <h2 id="technical-enhancements">Technical enhancements</h2>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. Number of environment validation not working as expected</strong></p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Only Extend environments are taken into consideration by the MAX_ENV_COUNT metadata. 
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. The number of environment validation not working as expected</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Now only the Extend environments are taken into consideration by the MAX <em> ENV </em> COUNT metadata. 
 <br><br> </p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>2. Environments provisioned with the FCM, Infinity and Wealth templates have a similar dynamic structure as the ones provisioned with Transact templates</strong> </p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - As part of the GIT Folder Standardization changes, Temenos Continuous Deployment provides separate folder structure for FCM, Wealth and Infinity under the parent folder <em>Environment Configuration</em>. Read more <a href="http://documentation.temenos.cloud/home/techguides/deploy-an-update-to-an-existing-environment.html#the-environment-folder-structure-after-the-clone"><strong>here</strong></a>.
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - As part of the GIT Folder Standardization changes, Temenos Continuous Deployment provides a separate folder structure for environments provisitioned with FCM, Wealth and Infinity Templates under the parent folder <em>Environment Configuration</em>. Read more <a href="http://documentation.temenos.cloud/home/techguides/deploy-an-update-to-an-existing-environment.html#the-environment-folder-structure-after-the-clone"><strong>here</strong></a>.
 <br>
 </br></p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>3. The Save as New Template features is not deploying the non-mandatory components</strong></p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Non-mandatory components are now getting deployed with the template created from <em>Save as New Template</em> functionality.
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>3. The* Save as New Template* feature is not deploying the non-mandatory components</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Non-mandatory components are now getting deployed with the template created via the <em>Save as New Template</em> functionality.
 <br>
 </br> </p>
 <h1 id="202012"><strong>202012</strong></h1>
