--- a/home/techguides/release-notes-internal.html
+++ b/home/techguides/release-notes-internal.html
@@ -93,7 +93,7 @@
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - As part of the GIT Folder Standardization changes, Temenos Continuous Deployment provides a separate folder structure for environments provisitioned with FCM, Wealth and Infinity Templates under the parent folder <em>Environment Configuration</em>. Read more <a href="http://documentation.temenos.cloud/home/techguides/deploy-an-update-to-an-existing-environment.html#the-environment-folder-structure-after-the-clone"><strong>here</strong></a>.
 <br>
 </br></p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>3. The* Save as New Template* feature is not deploying the non-mandatory components</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>3. The <em>Save as New Template</em> feature is not deploying the non-mandatory components</strong></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Non-mandatory components are now getting deployed with the template created via the <em>Save as New Template</em> functionality.
 <br>
 </br> </p>
