--- a/home/techguides/release-notes-internal.html
+++ b/home/techguides/release-notes-internal.html
@@ -83,8 +83,8 @@
 
 <p>This page provides information about the monthly Temenos Continuous Deployment Platform features and improvements in each release.</p>
 <h1 id="20201201"><strong>202012.01</strong></h1>
-<p><strong>InfraBuild</strong>: TBA   &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: TBA
-&nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: TBA  &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TBA &nbsp; </p>
+<p><strong>InfraBuild</strong>: 39   &nbsp;<strong>|</strong>&nbsp; <strong>PortalBuild</strong>: 2245
+&nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 202012_HF1  &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202012.1 &nbsp; </p>
 <h2 id="technical-enhancements">Technical enhancements</h2>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. The number of environment validation not working as expected</strong></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Now only the Extend environments are taken into consideration by the MAX <em> ENV </em> COUNT metadata. 
