--- a/home/techguides/release-notes.html
+++ b/home/techguides/release-notes.html
@@ -82,6 +82,21 @@
 <h2 id="release-notes">Release Notes</h2>
 
 <p>This page provides information about the monthly Temenos Continuous Deployment Platform features and improvements in each release. </p>
+<h1 id="20201201"><strong>202012.01</strong></h1>
+<p><strong>InfraBuild</strong>: 39   &nbsp;<strong>|</strong>&nbsp; <strong>PortalBuild</strong>: 2245
+&nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 202012_HF1  &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202012.1 &nbsp; </p>
+<h2 id="technical-enhancements">Technical enhancements</h2>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. The number of environment validation not working as expected</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Now only the Extend environments are taken into consideration by the MAX <em> ENV </em> COUNT metadata. 
+<br><br>   </p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>2. Environments provisioned with the FCM, Infinity and Wealth templates have a similar dynamic structure as the ones provisioned with Transact templates</strong> </p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - As part of the GIT Folder Standardization changes, Temenos Continuous Deployment provides a separate folder structure for environments provisitioned with FCM, Wealth and Infinity Templates under the parent folder. Read more <a href="http://documentation.temenos.cloud/home/techguides/deploy-an-update-to-an-existing-environment.html#the-environment-folder-structure-after-the-clone"><strong>here</strong></a>.
+<br>
+</br></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>3. The <em>Save as New Template</em> feature is not deploying the non-mandatory components</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Non-mandatory components are now getting deployed with the template created via the <em>Save as New Template</em> functionality.
+<br>
+</br> </p>
 <h1 id="202012"><strong>202012</strong></h1>
 <p><strong>InfraBuild</strong>: 39    &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: 202012.RC5
 &nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 364    &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202012   &nbsp; </p>
