--- a/home/techguides/environment-basic-operations.html
+++ b/home/techguides/environment-basic-operations.html
@@ -134,84 +134,22 @@
 </li>
 <li><p><strong>Rebuild</strong> an environment - recreate the resources into the cloud and re-installs T24 and H2 db. This is used for example when modifying the application templates (i.e. changing the T24 displayed name or adding a new application).</p>
 </li>
-<li><p><strong>Save as new template</strong> - the functionality is enabled by default to an environment.</p>
-<ul>
-<li>the functionality copies all the components from the environment GIT Repository to Artifactory and saves them as a new template. </li>
-<li>To save the new template, you need to have the mandatory components uploaded and deployed successfully. This is to ensure that there will be no issues in any environment  created from the new template. </li>
-<li>If all the mandatory components are deployed successfully then you can save the new template otherwise the <strong>Save as new template</strong> fails. </li>
-<li><p>To proceed, click on the <strong>Save as new template</strong> and read the information in the pop-up. Fill in the blanks, tick the box and then click on <strong>Save Template</strong>.</p>
-<p><img src="images/save-as-new-template.png" alt=""> </p>
-</li>
-</ul>
+<li><p><strong>Save as new template</strong> - read more <strong><a href="http://documentation.temenos.cloud/home/techguides/save-as-new-template.html">here</a></strong>.</p>
 </li>
 <li><p><strong>Edit the environment</strong> - change the name and the description of an environment. You can ignore the <strong>Auto Start / Stop Scheduler</strong> as configured in the <strong>Schedule Environments</strong> from the General Tab:</p>
 <p>   <img src="images/edit-environment-update.png" alt=""> </p>
 </li>
 <li><p><strong>Clone environment</strong> - create an identical environment by copying the Environment and configuration repository</p>
 </li>
-<li><p><strong>Upgrade</strong> - the feature is only available for the <strong>Model Bank TSS/ OSS Stack Template</strong>, therefore Extend environments. By clicking on <strong>Upgrade</strong> you can boost the environment to the target template version. Watch the tutorial <a href="https://youtu.be/R4J4P-SlJ6Q">here</a>.</p>
-<ul>
-<li><p>Upon clicking on the button a pop-up appears which prompts to select another template from the list of available template:
-<img src="images/environment-upgrade-button.png" alt=""> </p>
+<li><p><strong>Upgrade</strong> - read more <strong><a href="http://documentation.temenos.cloud/home/techguides/upgrade-trials.html">here</a></strong>.</p>
 </li>
-<li><p>Click on <strong>Upgrade</strong> to proceed.</p>
-</li>
-<li><p>The environment status changes to <strong>Upgrading</strong>:</p>
-<p>   <img src="images/environment-upgrading.png" alt=""> </p>
-<ul>
-<li>In the <strong>Events</strong> tab you can see the log which refers to the upgrade from the Base template to Target template
-<br>
-</br></li>
-</ul>
-</li>
-</ul>
-<p><strong>Upgrade Validations:</strong></p>
-</li>
-</ul>
-<ol>
-<li><p>The <strong>Upgrade</strong> button is enabled at the organisation level.</p>
-</li>
-<li><p>Once the <strong>Upgrade</strong> is initiated all the environment action buttons are disabled except <strong>Edit Environment</strong> and <strong>Delete Environment</strong> buttons.</p>
-</li>
-<li><p>Only users with the permission UPGRADE_TEMPLATE will have the <strong>Upgrade</strong> button enabled on their environment.</p>
-</li>
-<li><p>The <strong>Upgrade</strong> button is not available on a stopped environment.</p>
-</li>
-<li><p>Make sure you have a Database Backup before the upgrade.</p>
-</li>
-<li><p>L3 or other plugins present in the current template are not auto deployed, and you have to upload them back to GIT and deploy it post upgrade.</p>
-</li>
-<li><p>The upgrade pipeline will not deploy anything on the GIT folder to the upgraded environment automatically, therefore you have to manually trigger this post upgrade.</p>
-</li>
-<li><p>The new app server won’t have any additional queues.</p>
-</li>
-<li><p>The upgrade flow is from the client template to ModelBank template and not vice-versa.</p>
-</li>
-<li><p>An environment created with a custom template can be upgraded to a ModelBank template and not vice versa.</p>
-</li>
-<li><p>When an environment is upgraded, the <strong>Clone</strong> and <strong>Rebuild</strong> options are not available.</p>
-</li>
-<li><p>The <strong>Upgrade</strong> functionality is not available for environments resulted from factory runs (automated and manual factories).</p>
-</li>
-<li><p>An environment can only be upgraded with a MB template that is assigned to your organisation. You won&#39;t be able to upgrade a MB-T24-Wildfly-H2-202002 to a MB-T24-Wildfly-H2-202004 if the latter version is not assigned to your organisation. </p>
-</li>
-</ol>
-<p><br>
-</br></p>
-<p> <strong>After the upgrade is completed you can:</strong></p>
-<ol>
 <li><p><strong>Rebuild</strong> the upgraded environment from the  <strong>Actions</strong> button - a pop-up informs that <em>Any changes made to the environment will be lost and the environment will be reset to its original state.</em> To proceed, tick the check box and click <strong>Confirm</strong>:</p>
 <p><img src="images/upgrade-rebuild-env.png" alt=""> </p>
 </li>
 <li><p><strong>Clone</strong> the upgraded environment from the <strong>Actions</strong> button -  a pop-up appears where you need to insert the <strong>Environment Name</strong>, <strong>Environment Description</strong> and <strong>Labels</strong>. The pop-up informs that if L3 packages are manually altered, then they will not be copied and the clone may not work if the T24 environment is upgraded:</p>
 <p><img src="images/upgrade-rebuild-env.png" alt=""> </p>
 </li>
-<li><p><strong>Customize Template</strong> from the Repository Section - a pop-up informs where you can find the template customization user guide and that the <em>Customize My Template will not work if T24 environment is upgraded</em>. To proceed, tick the checkbox and click <strong>Confirm</strong>:</p>
-<p><img src="images/upgrade-customize-template.png" alt=""> </p>
-<blockquote><p>Note: the <strong>Customize Template</strong> functionality is not enabled for factory run environments (automated and manual factories).</p>
-</blockquote>
-</li>
-</ol>
+</ul>
 <p><br>
 </br></p>
 <h2 id="t24-release-section---available-actions">T24 Release section - available actions</h2>
