--- a/home/techguides/save-as-new-template.html
+++ b/home/techguides/save-as-new-template.html
@@ -107,10 +107,13 @@
 <h2 id="post-template-creation-actions">Post template creation actions</h2>
 <p>After the template is successfully created you can:</p>
 <ol>
-<li><p>Provision an environment with the newly created template (learn <a href="http://documentation.temenos.cloud/home/manage-environments.html">here</a> how to create an environment). </p>
-</li>
-<li><p>Run a factory using the template (learn <a href="http://documentation.temenos.cloud/home/techguides/run-factory.html">here</a> how to run factories).</p>
-</li>
+<li>Provision an environment with the newly created template (learn <a href="http://documentation.temenos.cloud/home/manage-environments.html">here</a> how to create an environment). </li>
+</ol>
+<div class="NOTE"><h5>Note</h5><p>If you want to use <strong>axis2</strong> and <strong>ejb .jar files</strong> in an environment provisioned with a template resulted from the <strong>Save as new Template</strong> feature then you need to deploy the two components first.</p>
+<p>​ Similarly, you need to take the same action for the dsf-iris.war files (learn <a href="http://documentation.temenos.cloud/home/techguides/deploy-an-update-to-an-existing-environment.html">here</a> how to deploy them).</p>
+</div>
+<ol>
+<li>Run a factory using the template (learn <a href="http://documentation.temenos.cloud/home/techguides/run-factory.html">here</a> how to run factories).</li>
 </ol>
 <h2 id="tutorial">Tutorial</h2>
 <p>Watch the video tutorial <a href="https://www.youtube.com/watch?v=4G7PH5tsej0&amp;feature=youtu.be"><strong>here</strong></a>.</p>
