--- a/home/toc.html
+++ b/home/toc.html
@@ -99,13 +99,16 @@
                           <a href="techguides/environment-basic-operations.html" name="" title="Perform Environment Basic Operations">Perform Environment Basic Operations</a>
                         </li>
                         <li>
+                          <a href="techguides/deploy-an-update-to-an-existing-environment.html" name="" title="Deploy an update to an existing environment">Deploy an update to an existing environment</a>
+                        </li>
+                        <li>
+                          <a href="techguides/save-as-new-template.html" name="" title="Self-service templates">Self-service templates</a>
+                        </li>
+                        <li>
                           <a href="techguides/upgrade-trials.html" name="" title="Upgrade Trials">Upgrade Trials</a>
                         </li>
                         <li>
                           <a href="techguides/itss-test-framework-template.html" name="" title="ITSS Test Framework Template Implementation">ITSS Test Framework Template Implementation</a>
-                        </li>
-                        <li>
-                          <a href="techguides/deploy-an-update-to-an-existing-environment.html" name="" title="Deploy an update to an existing environment">Deploy an update to an existing environment</a>
                         </li>
                         <li>
                           <a href="techguides/t24-development.html" name="" title="Develop T24 packages, plugins and Code">Develop T24 packages, plugins and Code</a>
